# IMU_data_validation_library

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ros2-ci.yml
config/platform_profiles/: asv.yaml  auv.yaml  heauv.yaml  high_speed_asv.yaml  xlauv.yaml
examples/: live_serial_imu_data_source_example.cpp  mpu6050_programmatic_validation_example.cpp  vn200_programmatic_validation_example.cpp
include/imu_validator/: imu_validation_config.hpp  imu_validator.hpp  validation_result.hpp
include/imu_validator/imu_validation_test_framework/: extension_registry.hpp  imu_data_source.hpp  platform_profile.hpp  programmatic_imu_data_source.hpp  rosbag_imu_data_source.hpp  scenario_validator.hpp  validation_scenario_runner.hpp  yaml_platform_profile_provider.hpp
scripts/: verify_build.sh
src/: imu_validator.cpp
src/imu_validation_test_framework/: programmatic_imu_data_source.cpp  rosbag_imu_data_source.cpp  scenario_validator.cpp  validation_scenario_runner.cpp  yaml_platform_profile_provider.cpp
test/: test_extension_registry.cpp  test_programmatic_source_and_runner.cpp  test_yaml_profile_provider.cpp
tests/: test_imu_validation_profiles_and_anomalies.cpp  test_time_sequence_and_rosbag_replay.cpp
