<?xml version="1.0"?>
<package format="3">
  <name>imu_validator</name>
  <version>0.1.0</version>
  <description>Reusable ROS2 IMU message validation library with configurable thresholds and structured output.</description>
  <maintainer email="maintainer@example.com">imu_validator maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
